[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scipion-em-boltz1"
dynamic = ["version", "dependencies"]

authors = [
    {name = "Estela Díez"}
]
description = "Plugin to use Boltz-1 within the Scipion framework"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["scipion", "electron-microscopy", "structural-biology", "scipion-3.0"]
license = {text = "GNU General Public License v3 (GPLv3)"}

[project.urls]
Homepage = "https://github.com/scipion-em/scipion-em-boltz1"
Repository = "https://github.com/scipion-em/scipion-em-boltz1"
Issues = "https://github.com/scipion-em/scipion-em-boltz1/issues"

[tool.setuptools.package-data]
"boltz1"= ["protocols.conf", "icon.png"]

[project.entry-points."pyworkflow.plugin"]
boltz1 = "boltz1"

[tool.setuptools.dynamic]
version = {attr = "boltz1.__version__"}
dependencies = {file = ["requirements.txt"]}